# trading-bot

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
anchor/: Anchor.toml
anchor/programs/txhedge/: Cargo.toml
anchor/programs/txhedge/src/: lib.rs
server/: db.ts  index.ts  migrate.ts  neon_init.sql  solana.ts  txline.ts  txlineApi.ts  txlineSetup.ts
server/agent/: strategyEngine.ts
server/workers/: txlineWorker.ts
src/: App.tsx  index.css  main.tsx
src/components/: agent-feed.tsx  animated-number.tsx  featured-market.tsx  fixture-lobby.tsx  glow-card.tsx  home-hero.tsx  odds-chart.tsx  positions-table.tsx  proof-modal.tsx  proof-panel.tsx  strategy-panel.tsx  trading-terminal.tsx
src/lib/: api.ts  flags.ts  solanaClient.ts  store.ts  txhedge.json  types.ts  use-phantom-wallet.ts  use-txline-socket.ts
supabase/migrations/: 20260712201733_001_txhedge_init.sql
