[package]
name = "txhedge"
version = "0.1.0"
description = "TxHedge — Verifiable Sports Hedging on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "txhedge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = []
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
